--- a/index.html
+++ b/index.html
@@ -1,1 +1,29 @@
-<!-- HTML CODE -->
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Flappy bird</title>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Teko:wght@700&display=swap" rel="stylesheet">
+
+  <style>
+    canvas {
+      border: 1px solid black;
+      margin: 0 auto;
+      display: block;
+    }
+  </style>
+
+</head>
+
+<body>
+  <canvas id="frame" width="320" height="480"></canvas>
+
+  <script src="game.js"></script>
+</body>
+
+</html>
